--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,40 @@
     tools:context="com.a520.stone.honey.MainActivity">
 
     <TextView
+        android:id="@+id/username"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:hint="请输入用户名"
+        android:textColor="#898181"
         android:textSize="16dp"
     />
+    <TextView
+        android:id="@+id/psw"
+        android:layout_below="@id/username"
+        android:layout_marginTop="10dp"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="请输入密码"
+        android:textColor="#898181"
+        android:textSize="16dp"
+    />
+    <Button
+        android:layout_marginLeft="140dp"
+        android:id="@+id/btn_config"
+        android:layout_below="@id/psw"
+        android:textSize="16dp"
+        android:text="确认"
+        android:layout_width="50dp"
+        android:layout_height="20dp" />
+    <Button
+        android:id="@+id/btn_reset"
+        android:layout_below="@id/psw"
+        android:layout_toRightOf="@id/btn_config"
+        android:textSize="16dp"
+        android:text="重置"
+        android:layout_width="50dp"
+        android:layout_height="20dp" />
+
 </RelativeLayout>
