--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/activity_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.a520.stone.honey.MainActivity">
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fitsSystemWindows="true" >
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center">
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="请输入用户名"
-        android:textColor="#898181"
-        android:textSize="16dp"
-    />
-    <TextView
-        android:id="@+id/psw"
-        android:layout_below="@id/username"
-        android:layout_marginTop="10dp"
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="请输入密码"
-        android:textColor="#898181"
-        android:textSize="16dp"
-    />
-    <Button
-        android:layout_marginLeft="140dp"
-        android:id="@+id/btn_config"
-        android:layout_below="@id/psw"
-        android:textSize="16dp"
-        android:text="确认"
-        android:layout_width="50dp"
-        android:layout_height="20dp" />
-    <Button
-        android:id="@+id/btn_reset"
-        android:layout_below="@id/psw"
-        android:layout_toRightOf="@id/btn_config"
-        android:textSize="16dp"
-        android:text="重置"
-        android:layout_width="50dp"
-        android:layout_height="20dp" />
+        <FrameLayout
+            android:id="@+id/username_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="55dp"
+            android:gravity="center" >
+
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:inputType="number"
+            android:paddingRight="60dp"
+            android:maxLength="20"
+            android:paddingLeft="55dp" >
+        </EditText>
+        <ImageView
+            android:layout_width="22dp"
+            android:layout_height="21dp"
+            android:layout_marginStart="8dp"
+            android:layout_gravity="left|center_vertical"
+            android:background="@drawable/login_usr_in_img"
+            android:visibility="visible" />
+
+
+        <TextView
+            android:id="@+id/contry_sn"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginTop="4dp"
+            android:gravity="center"
+            android:text="+62"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/bt_username_clear"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            android:background="@drawable/button_clear"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="10dp"
+            android:visibility="invisible"
+        />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/usercode_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/username_layout"
+            android:layout_marginTop="6dp"
+            android:gravity="center" >
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="fill_parent"
+                android:layout_height="40dp"
+                android:inputType="textPassword"
+                android:paddingRight="60dp"
+                android:maxLength="20"
+                android:paddingLeft="55dp" >
+            </EditText>
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="22dp"
+                android:layout_marginStart="7dp"
+                android:layout_gravity="left|center_vertical"
+                android:background="@drawable/login_code_in_img" />
+            <Button
+                android:id="@+id/bt_pwd_eye"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
+                android:background="@drawable/button_eye_n"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="10dp" />
+            <Button
+                android:id="@+id/bt_pwd_clear"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
+                android:background="@drawable/button_clear"
+                android:visibility="invisible"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="33dp" />
+        </FrameLayout>
+
+        <Button
+            android:id="@+id/login"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:layout_below="@id/usercode_layout"
+            android:layout_marginTop="30dp"
+            android:background="#ff336699"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:text="登录" />
+
+        <Button
+            android:id="@+id/login_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@id/login"
+            android:layout_below="@id/login"
+            android:background="#00000000"
+            android:text="忘记密码"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/login"
+            android:layout_below="@id/login"
+            android:background="#00000000"
+            android:gravity="left|center_vertical"
+            android:text="注册"
+            android:textSize="16sp"
+            android:visibility="visible" />
+
+        <RelativeLayout
+            android:id="@+id/remember_layout000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="1dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp" >
+            <Button
+                android:id="@+id/registfer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#00000000"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="飞哥独创，带你一起走进他的内心世界！"
+                android:textSize="16sp"
+                android:visibility="visible" />
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
