--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/register_toolbar"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_width="match_parent">
+    </android.support.v7.widget.Toolbar>
+
     <EditText
         android:id="@+id/et_text"
         android:layout_marginLeft="@dimen/layout_marginTop"
@@ -25,7 +31,8 @@
         android:layout_height="wrap_content"
         android:text="获取验证码"
         android:textSize="18dp"
-        android:background="#1ebc60"
+        android:textColor="#fff"
+        android:background="#FF336699"
         android:gravity="center"
     />
     <TextView
