--- a/app/src/main/res/layout/activity_forgetpsw.xml
+++ b/app/src/main/res/layout/activity_forgetpsw.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fitsSystemWindows="true">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/forget_toolbar"
         android:layout_height="?attr/actionBarSize"
         android:layout_width="match_parent">
+        <TextView
+            android:id="@+id/text_forget"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="忘记密码"
+            android:gravity="center" />
     </android.support.v7.widget.Toolbar>
 
     <EditText
         android:id="@+id/et_phone"
+        android:layout_below="@id/forget_toolbar"
         android:layout_marginLeft="@dimen/layout_marginTop"
         android:layout_marginTop="@dimen/layout_marginTop"
         android:layout_marginRight="@dimen/layout_marginRight"
