--- a/app/src/main/res/layout/activity_forgetpsw.xml
+++ b/app/src/main/res/layout/activity_forgetpsw.xml
@@ -5,21 +5,27 @@
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/forget_toolbar"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_width="match_parent">
+    <FrameLayout
+        android:id="@+id/ll_forget_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <include
+            layout="@layout/toolbar" />
         <TextView
-            android:id="@+id/text_forget"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="忘记密码"
-            android:gravity="center" />
-    </android.support.v7.widget.Toolbar>
+        android:layout_marginStart="80dp"
+        android:id="@+id/text_forget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="注册账户"
+        android:textColor="#fff"
+        android:textSize="20dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+         />
+    </FrameLayout>
 
     <EditText
         android:id="@+id/et_phone"
-        android:layout_below="@id/forget_toolbar"
+        android:layout_below="@id/ll_forget_toolbar"
         android:layout_marginLeft="@dimen/layout_marginTop"
         android:layout_marginTop="@dimen/layout_marginTop"
         android:layout_marginRight="@dimen/layout_marginRight"
@@ -89,8 +95,5 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="19dp"
         android:layout_height="40dp" />
-
-
-
 
 </RelativeLayout>
