--- a/app/src/main/res/menu/menu_login.xml
+++ b/app/src/main/res/menu/menu_login.xml
@@ -4,12 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk"
     tools:context=".LoginActivity">
-    <item
-        android:id="@+id/action_edit"
-        android:title="@string/text_instruction"
-        android:orderInCategory="80"
-        android:icon="@mipmap/ic_launcher"
-        app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/toolbar_action1"
+        android:icon="@drawable/ic_launcher"
+        android:title="排序"
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/toolbar_action2"
+        android:icon="@drawable/ic_launcher"
+        android:title="整理"
+        app:showAsAction="never"/>
 
 </menu>
