--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/register_toolbar"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_width="match_parent">
+
+        <ImageView
+            android:id="@+id/home_back"
+            android:layout_height="wrap_content"
+            android:layout_width="26dp"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/arrow_back"
+            android:clickable="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:text="honey"
+            android:textSize="26dp"
+            android:textColor="#100f0f" />
+        <ImageView
+            android:id="@+id/home_share"
+            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/shared_picture"
+            android:onClick="onClick"
+            android:clickable="true" />
+    </android.support.v7.widget.Toolbar>
+
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
         android:background="#ffffff"
-        app:tabIndicatorColor="#66ff33"
-        app:tabIndicatorHeight="20dp"
-        app:tabTextColor="@color/colorPrimary"
-        app:tabSelectedTextColor="#CC33FF"
+        app:tabIndicatorColor="#e19844"
+        app:tabIndicatorHeight="2dp"
+        app:tabTextColor="#080707"
+        app:tabSelectedTextColor="#33a0ff"
         app:tabMode="fixed"
         app:tabBackground="@drawable/selected"
-
         />
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
