--- a/app/src/main/res/layout/activity_network.xml
+++ b/app/src/main/res/layout/activity_network.xml
@@ -8,6 +8,14 @@
         android:layout_height="wrap_content">
 
     </android.support.v7.widget.Toolbar>
+    <Button
+        android:id="@+id/come_button"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="100dp"
+        android:text="开启电灯页面"
+        android:textSize="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/network_text"
