--- a/app/src/main/res/layout/fragment_hotdock.xml
+++ b/app/src/main/res/layout/fragment_hotdock.xml
@@ -10,6 +10,7 @@
         android:layout_marginLeft="100dp"
         android:text="信号检测"
         android:textSize="20dp"
+        android:background="@drawable/button_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
